2015-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: (print_platform): Do not execute
	  /usr/bin/sw_vers if it doesn't exists.
	* common-src/amutil.c: Fix debugging statement.

2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Runs.pl, installcheck/amreport.pl,
	  perl/Amanda/Amdump.pm, perl/Amanda/Amflush.pm,
	  perl/Amanda/CheckDump.pm, perl/Amanda/DB/Catalog.pm,
	  perl/Amanda/FetchDump.pm, perl/Amanda/Logfile.swg,
	  perl/Amanda/Process.pm, perl/Amanda/Rest/Report.pm,
	  perl/Amanda/Rest/Runs.pm, perl/Amanda/Status.pm,
	  perl/Amanda/Vault.pm, server-src/amstatus.pl,
	  server-src/driver.c: CNF_LOGIDR can be relative.

2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c (print_platform): Detect BSD variant.

2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Remove useless line.

2015-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* config/compile, config/config.guess,
	  config/config.sub, config/missing,
	  config/test-driver: Upgrade to automake 1.14.1

2015-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cmdline.swg, perl/Amanda/Device.swg,
	  perl/Amanda/MainLoop.swg, perl/Amanda/NDMP.swg,
	  perl/Amanda/Util.swg: Fix linking issue.

2015-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix perl warning.

2015-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/components.m4: Remove AMANDA_JSON_SERVER and
	  WANT_JSON_SERVER.
	* config/amanda/json.m4: Remove file
	* perl/Amanda/JSON/*: Remove directory.
	* perl/Amanda/JSON.pm: Remove module.
	* perl/Makefile.am: Remove Amanda/JSON.pm and Amanda/JSON/*
	* server-src/Makefile.am: Remove amanda.psgi
	* server-src/amanda.psgi.pl: Remove file.

2015-01-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Vault.pm: Remove bogus print statement.

2015-01-13  Jean-Louis Martineau <martineau@zmanda.com>